@@ -1,5 +1,15 @@
 2008-12-18  Matevz Tadel  <matevz.tadel@ijs.si>
 
+	* images/lin_track_explosion-1.png:
+	* images/lin_track_explosion-2.png:
+	* images/lin_track_explosion-3.png:
+	New gradients for track-explosion.
+
+	* AliLoader.C:
+	Load some more gradients.
+
+2008-12-18  Matevz Tadel  <matevz.tadel@ijs.si>
+
 	* images/lin_coldsteel.png:
 	* images/lin_r2y.png:
 	New gradients for tracks.
